--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <br>
             <div class="row">
 <input type="text" id="input-box" placeholder="Add your Task">
-<button onclick="addTask()"> Add  </button>
+<button onclick="addTask()" class="btn"> Add  </button>
             </div>
           
-<ul id="list-container">
+<ul id="list-container" class="lists"> 
 
 
 </ul>
