--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="container">
+        <br><br>
+   <h1 style="text-align: center; color: #002765;">TaskMaster <br>Your Ultimate Productivity Tool</h1>
         <div class="todo">
             <div style="display: flex; justify-content: space-between;">
             <h2>To-Do List <img src="./img/icon.png" alt="" > </h2>
